apt-listchanges (2.43) unstable; urgency=low

  * Fix the documentation to reflect the removal of support for
    apt-listchanges-specific BROWSER environment variables; this is all
    done in the usual way now, using sensible-browser.

 --

apt-listchanges (2.42) unstable; urgency=low

  * Fix the mail frontend, broken in 2.40 (Closes: #205925)

 -- Matt Zimmerman <mdz@debian.org>  Sun, 17 Aug 2003 12:04:01 -0400

apt-listchanges (2.41) unstable; urgency=low

  * Don't print headers for packages where there are no changes to display
    (Closes: #205858)

 -- Matt Zimmerman <mdz@debian.org>  Sun, 17 Aug 2003 00:54:23 -0400

apt-listchanges (2.40) unstable; urgency=low

  * Updated Spanish translation of debconf templates from Carlos Valdivia
    Yag?e <valyag@dat.etsit.upm.es> (Closes: #203993)
  * Updated Dutch translation of debconf templates from cobaco
    <cobaco@linux.be> (Closes: #204700)
  * Updated Spanish man page from cvs.d.o/manpages/spanish
    (Closes: #203763)
  * Python 2.3 now provides secure temporary files with names.  This means
    that we don't need to do any more pipe tricks to pass things into
    xterm, and we can get rid of the browser-pipe script.  Depends: python
    (>= 2.3)
    - This also happens to fix some problems with non-xterm terminal
      emulators such as rxvt, which closed our pipe fd on use
      (Closes: #205323)

 -- Matt Zimmerman <mdz@debian.org>  Fri, 15 Aug 2003 21:41:02 -0400

apt-listchanges (2.39) unstable; urgency=low

  * Ignore changelog files which don't look like Debian changelogs.  This
    will provide a nicer failure condition for situations like #161325,
    where changelog data is not actually available (but we previously
    thought it was)
  * Don't display NEWS headers in the case where a NEWS.Debian was present
    but contained no news (Closes: #202143)

 -- Matt Zimmerman <mdz@debian.org>  Tue, 29 Jul 2003 19:42:46 -0400

apt-listchanges (2.38) unstable; urgency=low
